[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wn_edit"
dynamic = ["version"]
description = "A modification add-on for the Python wn (WordNet) module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Francis Bond", email = "bond@ieee.org" },
]
keywords = [
    "wordnet",
    "nlp",
    "linguistics",
    "lexicon",
    "semantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "wn>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/bond-lab/wn_edit"
Documentation = "https://github.com/bond-lab/wn_edit#readme"
Repository = "https://github.com/bond-lab/wn_edit"
Issues = "https://github.com/bond-lab/wn_edit/issues"

[tool.hatch.version]
path = "wn_edit/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/wn_edit",
]

[tool.hatch.build.targets.wheel]
packages = ["wn_edit"]

[tool.hatch.envs.default]
python = "3.13"
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
# Default: fast tests only (respects addopts = -m 'not slow')
test = "pytest {args:tests}"

# Explicit variants
test-fast = "pytest -m 'not slow' {args:tests}"
test-slow = "pytest -m slow {args:tests}"
test-all  = "pytest -m 'slow or not slow' {args:tests}"

# Coverage
test-cov = "pytest --cov=wn_edit --cov-report=term-missing {args:tests}"

[tool.hatch.envs.mypy]
python = "3.13"
dependencies = [
    "mypy>=1.0",
]

[tool.hatch.envs.mypy.scripts]
check = "mypy wn_edit"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not slow'"
markers = [
    "slow: marks tests as slow (run with: pytest -m slow)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D1"]  # Don't require docstrings everywhere during development